--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ofaly</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header id="hamburger-menu">
+      <!-- TODO if an image clicked make that button a cross -->
+      <button type="button">
+        <svg
+          width="47"
+          height="39"
+          viewBox="0 0 47 39"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect
+            x="0.0551758"
+            width="45.9761"
+            height="7.20686"
+            rx="3.60343"
+            fill="#9E9E9E"
+          />
+          <rect
+            x="0.0551758"
+            y="15.4433"
+            width="45.9761"
+            height="7.20686"
+            rx="3.60343"
+            fill="#9E9E9E"
+          />
+          <rect
+            x="0.0551758"
+            y="30.8866"
+            width="45.9761"
+            height="7.20686"
+            rx="3.60343"
+            fill="#9E9E9E"
+          />
+        </svg>
+      </button>
+      <nav>
+        <ul>
+          <a href="#" class="nav-item selected"><li>Ofaly.Club</li></a>
+          <a href="#" class="nav-item selected"><li>Ofaly.Digital</li></a>
+          <a href="#" class="nav-item selected"><li>Ofaly.Milton</li></a>
+          <a href="#" class="nav-item selected"><li>Ofaly.Motor</li></a>
+        </ul>
+      </nav>
+    </header>
+    <section id="hero" class="page-section">
+      <div>
+        <div id="img-container">
+          <img
+            src="./assets/images/Main.png"
+            alt="The main image of the ofaly club."
+          />
+        </div>
+      </div>
+      <article>
+        <h1>Ofaly.Club</h1>
+        <p>
+          Ofaly companies are fully or majority owned by
+          <a href="#">UnVC Capital</a>. The Private Equity firm and its partners
+          have astrong history of operational excellence, deep sector expertise,
+          and an extensive local, regional, and global business network. UnVC
+          buys companies to grow and hold, but never sell. We expect the number
+          of our Ofaly companies to grow over.
+        </p>
+      </article>
+    </section>
+    <section id="gallery" class="page-section">
+      <!--  TODO next article is hidden until you choose an image -->
+      <article id="clicked-image-container">
+        <img src="" alt="" />
+        <p></p>
+      </article>
+      <!-- TODO generated using js and numbers are generated automatically using ::after -->
+    </section>
+    <section id="jobs" class="page-section">
+      <h1>Jobs</h1>
+      <h2>We are looking for:</h2>
+      <ol>
+        <li>Mechanical Engineer</li>
+        <li>Back-End Developers</li>
+        <li>Serial Killers</li>
+      </ol>
+    </section>
+    <section id="contact" class="page-section">
+      <div id="contacts-container">
+        <h1>Contact Us</h1>
+        <ul>
+          <li><a href="http://Facebook.com">Facebook</a></li>
+          <li><a href="http://Whatsapp.com">Whatsapp</a></li>
+          <li><a href="http://Instagram.com">Instagram</a></li>
+          <li><a href="http://LinkedIn.com">LinkedIn</a></li>
+          <li><a href="mailto:sales@ofaly.com">sales@ofaly.com</a></li>
+        </ul>
+      </div>
+      <footer>
+        © Ofaly 2021
+        <br />
+        All rights reserved
+      </footer>
+    </section>
+    <script src="./app.js" type="module"></script>
+  </body>
 </html>
