added the used fonts & solved footer issue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./style.css" />
     <title>Ofaly</title>
+    <!-- TODO use this font 
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&family=Days+One&display=swap" rel="stylesheet">
+    -->
   </head>
   <body>
     <header id="hamburger-menu" class="z-index-3">
@@ -64,7 +69,7 @@
           </div>
 
           <article class="col">
-            <h1>Ofaly.Club</h1>
+            <h1 class="title-font">Ofaly.Club</h1>
             <p>
               Ofaly companies are fully or majority owned by
               <a href="#">UnVC Capital</a>. The Private Equity firm and its
