finished the mvp of the hero section for desktop

--- a/index.html
+++ b/index.html
@@ -60,25 +60,28 @@
     </header>
     <main>
       <section id="hero" class="page-section">
-        <div class="container row">
-          <div id="img-container" class="col">
-            <img
-              src="./assets/images/Main.png"
-              alt="The main image of the ofaly club."
-            />
-          </div>
+        <div class="container">
+          <div class="row">
+            <div id="img-container" class="col">
+              <img
+                src="./assets/images/Main.png"
+                alt="The main image of the ofaly club."
+              />
+            </div>
 
-          <article class="col">
-            <h1 class="title-font">Ofaly.Club</h1>
-            <p>
-              Ofaly companies are fully or majority owned by
-              <a href="#">UnVC Capital</a>. The Private Equity firm and its
-              partners have astrong history of operational excellence, deep
-              sector expertise, and an extensive local, regional, and global
-              business network. UnVC buys companies to grow and hold, but never
-              sell. We expect the number of our Ofaly companies to grow over.
-            </p>
-          </article>
+            <article class="col">
+              <h1 class="title-font">Ofaly.Club</h1>
+              <p>
+                Ofaly companies are fully or majority owned by
+                <a href="#">UnVC Capital</a>. The Private Equity firm and its
+                partners have astrong history of operational excellence, deep
+                sector expertise, and an extensive local, regional, and global
+                business network. UnVC buys companies to grow and hold, but
+                never sell. We expect the number of our Ofaly companies to grow
+                over.
+              </p>
+            </article>
+          </div>
         </div>
       </section>
       <section id="gallery" class="page-section">
