finished the main skiliton of the gallery

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             <img src="" alt="" />
             <p></p>
           </article>
-          <!-- TODO generated using js and numbers are generated automatically using ::after -->
+          <div id="images-row" class="row"></div>
+          <!-- TODO generated using js and numbers are generated automatically -->
         </div>
       </section>
       <section id="jobs" class="page-section">
