finished gallery clicking on an image

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <section id="gallery" class="page-section">
         <div class="container">
           <!--  TODO next article is hidden until you choose an image -->
-          <article id="clicked-image-container" class="z-index-2">
-            <img src="" alt="" />
+          <article id="clicked-image-container" class="z-index-3">
+            <img src="" alt="gallery-image" />
             <p></p>
           </article>
           <div id="images-row" class="row"></div>
