finished main functions of the hamburger menu

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       </button>
       <nav>
         <ul>
-          <a href="#" class="nav-item selected"><li>Ofaly.Club</li></a>
+          <a href="#" class="nav-item"><li>Ofaly.Club</li></a>
           <a href="#" class="nav-item selected"><li>Ofaly.Digital</li></a>
-          <a href="#" class="nav-item selected"><li>Ofaly.Milton</li></a>
-          <a href="#" class="nav-item selected"><li>Ofaly.Motor</li></a>
+          <a href="#" class="nav-item"><li>Ofaly.Milton</li></a>
+          <a href="#" class="nav-item"><li>Ofaly.Motor</li></a>
         </ul>
       </nav>
     </header>
