finished the hamburger-menu and its behaviour

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
       </button>
       <nav>
         <ul>
-          <a href="#" class="nav-item"><li>Ofaly.Club</li></a>
-          <a href="#" class="nav-item selected"><li>Ofaly.Digital</li></a>
-          <a href="#" class="nav-item"><li>Ofaly.Milton</li></a>
-          <a href="#" class="nav-item"><li>Ofaly.Motor</li></a>
+          <a href="#Ofaly.Club" class="nav-item selected"
+            ><li>Ofaly.Club</li></a
+          >
+          <a href="#Ofaly.Digital" class="nav-item"><li>Ofaly.Digital</li></a>
+          <a href="#Ofaly.Milton" class="nav-item"><li>Ofaly.Milton</li></a>
+          <a href="#Ofaly.Motor" class="nav-item"><li>Ofaly.Motor</li></a>
         </ul>
       </nav>
     </header>
