added the gallery selected image cross

--- a/index.html
+++ b/index.html
@@ -20,31 +20,30 @@
         <svg
           width="47"
           height="39"
-          viewBox="0 0 47 39"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
           <rect
-            x="0.0551758"
+            x=".0552"
             width="45.9761"
-            height="7.20686"
-            rx="3.60343"
+            height="7.2069"
+            rx="3.6034"
             fill="#9E9E9E"
           />
           <rect
-            x="0.0551758"
+            x=".0552"
             y="15.4433"
             width="45.9761"
-            height="7.20686"
-            rx="3.60343"
+            height="7.2069"
+            rx="3.6034"
             fill="#9E9E9E"
           />
           <rect
-            x="0.0551758"
+            x=".0552"
             y="30.8866"
             width="45.9761"
-            height="7.20686"
-            rx="3.60343"
+            height="7.2069"
+            rx="3.6034"
             fill="#9E9E9E"
           />
         </svg>
@@ -92,6 +91,9 @@
           <article id="clicked-image-container" class="z-index-3">
             <img src="" alt="gallery-image" />
             <p></p>
+            <button type="button">
+              <img src="./assets/images/cross.svg" alt="close-image" />
+            </button>
           </article>
           <div id="images-row" class="row"></div>
           <!-- TODO generated using js and numbers are generated automatically -->
