--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
               <h1 class="title-font">Ofaly.Club</h1>
               <p>
                 Ofaly companies are fully or majority owned by
-                <a href="#">UnVC Capital</a>. The Private Equity firm and its
-                partners have astrong history of operational excellence, deep
-                sector expertise, and an extensive local, regional, and global
-                business network. UnVC buys companies to grow and hold, but
-                never sell. We expect the number of our Ofaly companies to grow
-                over.
+                <a target="blank" href="#">UnVC Capital</a>. The Private Equity
+                firm and its partners have astrong history of operational
+                excellence, deep sector expertise, and an extensive local,
+                regional, and global business network. UnVC buys companies to
+                grow and hold, but never sell. We expect the number of our Ofaly
+                companies to grow over.
               </p>
             </article>
           </div>
@@ -101,9 +101,9 @@
       </section>
       <section id="jobs" class="page-section">
         <div class="container">
-          <h1>Jobs</h1>
-          <h2>We are looking for:</h2>
-          <ol>
+          <h1 class="section-h1">Jobs</h1>
+          <h2 class="section-h2">We are looking for:</h2>
+          <ol class="section-p">
             <li>Mechanical Engineer</li>
             <li>Back-End Developers</li>
             <li>Serial Killers</li>
@@ -113,13 +113,19 @@
       <section id="contact" class="page-section">
         <div class="container">
           <div id="contacts-container">
-            <h1>Contact Us</h1>
-            <ul>
-              <li><a href="http://Facebook.com">Facebook</a></li>
-              <li><a href="http://Whatsapp.com">Whatsapp</a></li>
-              <li><a href="http://Instagram.com">Instagram</a></li>
-              <li><a href="http://LinkedIn.com">LinkedIn</a></li>
-              <li><a href="mailto:sales@ofaly.com">sales@ofaly.com</a></li>
+            <h1 class="section-h1">Contact Us</h1>
+            <ul class="section-p">
+              <li><a target="blank" href="http://Facebook.com">Facebook</a></li>
+              <li><a target="blank" href="http://Whatsapp.com">WhatsApp</a></li>
+              <li>
+                <a target="blank" href="http://Instagram.com">Instagram</a>
+              </li>
+              <li><a target="blank" href="http://LinkedIn.com">LinkedIn</a></li>
+              <li>
+                <a target="blank" href="mailto:sales@ofaly.com"
+                  >sales@ofaly.com</a
+                >
+              </li>
             </ul>
           </div>
           <footer>
