--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Ofaly</title>
     <meta name="description" content="Home page of Ofaly company website." />
-    <!-- TODO use this font 
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&family=Days+One&display=swap" rel="stylesheet">
-    -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&family=Days+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header id="hamburger-menu" class="z-index-3">
