fixed issue related to the hamburger menu z-index

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     />
   </head>
   <body>
-    <header id="hamburger-menu" class="z-index-1">
+    <header id="hamburger-menu">
       <!-- TODO if an image clicked make that button a cross -->
-      <button aria-label="button to toggle the menu" type="button">
+      <button
+        class="z-index-1"
+        aria-label="button to toggle the menu"
+        type="button"
+      >
         <svg
           width="47"
           height="39"
@@ -51,7 +55,7 @@
         </svg>
       </button>
       <nav>
-        <ul>
+        <ul class="z-index-3">
           <a href="#Ofaly.Club" class="nav-item selected"
             ><li>Ofaly.Club</li></a
           >
