gallery now supports firefox

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="hamburger-menu">
       <!-- TODO if an image clicked make that button a cross -->
       <button
-        class="z-index-1"
+        class="z-index-2"
         aria-label="button to toggle the menu"
         type="button"
       >
@@ -72,7 +72,7 @@
             <div id="img-container" class="col">
               <img
                 width="100%"
-                src="./assets/images/Main.png"
+                src="./assets/images/main.png"
                 alt="The main image of the ofaly club."
               />
             </div>
