updated the jobs to be links

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
               <h1 class="title-font">Ofaly.Club</h1>
               <p>
                 Ofaly companies are fully or majority owned by
-                <a target="blank" href="#">UnVC Capital</a>. The Private Equity
-                firm and its partners have astrong history of operational
-                excellence, deep sector expertise, and an extensive local,
-                regional, and global business network. UnVC buys companies to
-                grow and hold, but never sell. We expect the number of our Ofaly
-                companies to grow over.
+                <a target="blank" href="https://unvc.com/">UnVC Capital</a>. The
+                Private Equity firm and its partners have astrong history of
+                operational excellence, deep sector expertise, and an extensive
+                local, regional, and global business network. UnVC buys
+                companies to grow and hold, but never sell. We expect the number
+                of our Ofaly companies to grow over.
               </p>
             </article>
           </div>
@@ -110,9 +110,21 @@
           <h1 class="section-h1">Jobs</h1>
           <h2 class="section-h2">We are looking for:</h2>
           <ol class="section-p">
-            <li>Mechanical Engineer</li>
-            <li>Back-End Developers</li>
-            <li>Serial Killers</li>
+            <li>
+              <a target="blank" href="https://mechanical-engineer.job">
+                Mechanical Engineer
+              </a>
+            </li>
+            <li>
+              <a target="blank" href="https://backend-developer.job">
+                Back-End Developers
+              </a>
+            </li>
+            <li>
+              <a target="blank" href="https://serial-killer.job">
+                Serial Killers
+              </a>
+            </li>
           </ol>
         </div>
       </section>
