fixed aspect-ratio for safari

--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
                 Mechanical Engineer
               </a>
             </li>
-            <li>
-              <a target="blank" href="https://backend-developer.job">
-                Back-End Developers
-              </a>
-            </li>
+            <li>Back-End Developers</li>
             <li>
               <a target="blank" href="https://serial-killer.job">
                 Serial Killers
