--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&family=Days+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400&family=Days+One&display=swap"
       rel="stylesheet"
     />
   </head>
