--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
         <div class="container">
           <!--  TODO next article is hidden until you choose an image -->
           <article id="clicked-image-container" class="z-index-3">
-            <img src="" alt="gallery-image" />
-            <p></p>
+            <div>
+              <img src="" alt="gallery-image" />
+              <p></p>
+            </div>
             <button
               aria-label="button to close the image container"
               type="button"
