some naming updates

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Ofaly Launcher</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <section id="gallery" class="page-section">
+  <body class="background">
+    <section id="launcher" class="page-section">
       <div class="container">
         <div id="images-row" class="row"></div>
       </div>
