--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="./assets/css/normalize.css" /> -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style2.css" />
     <title>Ofaly</title>
     <meta name="description" content="Home page of Ofaly company website." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
