--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               <p></p>
             </div>
             <button
+              id="hide-large-img"
               aria-label="button to close the image container"
               type="button"
             >
