--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <!-- custom styles files -->
-    <link rel="stylesheet" href="./style2.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
