finalizing the work

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
       </section>
     </main>
-    <!-- the common used overlay -->
+    <!-- the commonly used overlay -->
     <div id="overlay" class="z-index-1"></div>
 
     <!-- scripts -->
