--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Ofaly Launcher</title>
+
+    <!-- custom styles files -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body class="background">
     <section id="launcher" class="page-section">
       <div class="container">
@@ -14,6 +18,7 @@
       </div>
     </section>
 
+    <!-- scripts -->
     <script src="./app.js" type="module"></script>
   </body>
 </html>
