--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </section>
 
     <!-- scripts -->
-    <script src="./app.js" type="module"></script>
+    <script src="./launcher-images.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
