updated the logo from text to an image

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </div>
 
             <article class="col">
-              <h1 class="title-font">Ofaly.Club</h1>
+              <!-- <h1 class="logo">Ofaly.Club</h1> -->
+              <img class="logo" src="./assets/images/logo.png">
               <p>
                 Ofaly companies are fully or majority owned by
                 <a target="blank" href="https://unvc.com/">UnVC Capital</a>. The
@@ -168,6 +169,7 @@
     <div id="overlay" class="z-index-1"></div>
 
     <!-- scripts -->
-    <script src="./app.js" type="module"></script>
+    <script src="./gallery-images.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
