--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <!-- scripts -->
-    <script src="./launcher-images.js"></script>
+    <script src="./launcher-icons.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
