--- a/index.html
+++ b/index.html
@@ -33,49 +33,18 @@
           <img src="./assets/logos/Ofaly.svg" alt="Ofaly company logo." />
         </div>
         <section>
-          <a id="superapp-logo"><img src="./assets/logos/superapp.svg" /></a>
+          <!-- <a id="superapp-logo"><img src="./assets/logos/superapp.svg" /></a>
           <a id="club-logo"><img src="./assets/logos/club.svg" /></a>
           <a id="digital-logo"><img src="./assets/logos/digital.svg" /></a>
           <a id="express-logo"><img src="./assets/logos/express.svg" /></a>
           <a id="systems-logo"><img src="./assets/logos/systems.svg" /></a>
-          <a id="mafia-logo"><img src="./assets/logos/mafia.svg" /></a>
+          <a id="mafia-logo"><img src="./assets/logos/mafia.svg" /></a> -->
         </section>
       </div>
     </main>
 
     <!-- scripts -->
     <script src="./launcher-icons.js"></script>
-    <!-- <script src="./app.js"></script> -->
-    <script id="tempScript">
-      const aEls = [...document.querySelectorAll("a")];
-
-      aEls.forEach((el) => {
-        el.addEventListener("click", (event) => {
-          event.preventDefault();
-          aEls.forEach((el) => el.classList.remove("selected"));
-          el.classList.add("selected");
-        });
-      });
-
-      const clockSpan = document.querySelector("#clock");
-
-      const isItOneDigitNumber = (number) =>
-        String(number).split("").length === 1;
-
-      const updateTime = () => {
-        const time = new Date();
-        const hours = isItOneDigitNumber(time.getHours())
-          ? `0${time.getHours()}`
-          : time.getHours();
-        const minutes = isItOneDigitNumber(time.getMinutes())
-          ? `0${time.getMinutes()}`
-          : time.getMinutes();
-
-        clockSpan.innerText = `${hours}:${minutes}`;
-      };
-
-      updateTime();
-      setInterval(updateTime, 1000);
-    </script>
+    <script src="./app.js"></script>
   </body>
 </html>
