added new scrollbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
 
     <!-- custom styles files -->
     <link rel="stylesheet" href="style.css" />
+
+    <style>
+      /* TODO Handle the scrollbar */
+      /* width of vertical & height of horizontal scrollbars */
+      ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: rgba(178, 37, 25, 0.5);
+      }
+
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: rgb(140, 30, 21, 0.7);
+      }
+    </style>
   </head>
 
   <body>
