added a better loading-layer

--- a/index.html
+++ b/index.html
@@ -26,17 +26,9 @@
   </head>
 
   <body>
-    <div
-      style="
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background-color: red;
-      "
-      id="layer"
-    ></div>
+    <div id="loading-layer">
+      <img src="./assets/logos/Ofaly.svg" alt="Ofaly company logo." />
+    </div>
     <main id="launcher-outer-container">
       <div id="launcher-inner-container">
         <div id="notification-bar" aria-hidden="true">
