--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <!-- custom styles files -->
     <link rel="stylesheet" href="style.css" />
 
-    <style>
-      /* TODO Handle the scrollbar */
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
