removed unused code in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="black-translucent"
     />
 
-    <title>Ofaly Launcher</title>
+    <title>This is Ofaly</title>
 
     <!-- custom styles files -->
     <link rel="stylesheet" href="style.css" />
@@ -43,14 +43,7 @@
         <div id="logo-bar">
           <img src="./assets/logos/Ofaly.svg" alt="Ofaly company logo." />
         </div>
-        <nav role="navigation" aria-label="Main">
-          <!-- <a id="superapp-logo"><img src="./assets/logos/superapp.svg" /></a>
-          <a id="club-logo"><img src="./assets/logos/club.svg" /></a>
-          <a id="digital-logo"><img src="./assets/logos/digital.svg" /></a>
-          <a id="express-logo"><img src="./assets/logos/express.svg" /></a>
-          <a id="systems-logo"><img src="./assets/logos/systems.svg" /></a>
-          <a id="mafia-logo"><img src="./assets/logos/mafia.svg" /></a> -->
-        </nav>
+        <nav role="navigation" aria-label="Main"></nav>
       </div>
     </main>
 
